# toon-macro

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
toon-macro/: Cargo.toml
toon-macro-derive/: Cargo.toml
toon-macro-derive/src/: lib.rs  table_derive.rs  utils.rs
toon-macro/examples/: basic.rs  serde_integration.rs  tables.rs
toon-macro/src/: error.rs  internal.rs  lib.rs  macros.rs  ser.rs  table.rs  value.rs
toon-macro/tests/: derive_tests.rs
