[package]
name = "toon-macro-derive"
description = "Procedural macros for toon-macro crate (internal implementation detail - use toon-macro with 'derive' feature instead)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["toon", "macro", "derive", "serialization"]
categories = ["encoding", "development-tools::procedural-macro-helpers"]
documentation = "https://docs.rs/toon-macro"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
